; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/sysdev/bestcomm/extr_ata.c_bcom_ata_rx_prepare.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/sysdev/bestcomm/extr_ata.c_bcom_ata_rx_prepare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcom_task = type { i32 }
%struct.bcom_ata_inc = type { i32, i64, i32 }

@BCOM_INITIATOR_ATA_RX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bcom_ata_rx_prepare(%struct.bcom_task* %0) #0 {
  %2 = alloca %struct.bcom_task*, align 8
  %3 = alloca %struct.bcom_ata_inc*, align 8
  store %struct.bcom_task* %0, %struct.bcom_task** %2, align 8
  %4 = load %struct.bcom_task*, %struct.bcom_task** %2, align 8
  %5 = getelementptr inbounds %struct.bcom_task, %struct.bcom_task* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @bcom_task_inc(i32 %6)
  %8 = inttoptr i64 %7 to %struct.bcom_ata_inc*
  store %struct.bcom_ata_inc* %8, %struct.bcom_ata_inc** %3, align 8
  %9 = load %struct.bcom_ata_inc*, %struct.bcom_ata_inc** %3, align 8
  %10 = getelementptr inbounds %struct.bcom_ata_inc, %struct.bcom_ata_inc* %9, i32 0, i32 2
  store i32 -4, i32* %10, align 8
  %11 = load %struct.bcom_ata_inc*, %struct.bcom_ata_inc** %3, align 8
  %12 = getelementptr inbounds %struct.bcom_ata_inc, %struct.bcom_ata_inc* %11, i32 0, i32 1
  store i64 0, i64* %12, align 8
  %13 = load %struct.bcom_ata_inc*, %struct.bcom_ata_inc** %3, align 8
  %14 = getelementptr inbounds %struct.bcom_ata_inc, %struct.bcom_ata_inc* %13, i32 0, i32 0
  store i32 4, i32* %14, align 8
  %15 = load %struct.bcom_task*, %struct.bcom_task** %2, align 8
  %16 = getelementptr inbounds %struct.bcom_task, %struct.bcom_task* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @BCOM_INITIATOR_ATA_RX, align 4
  %19 = call i32 @bcom_set_initiator(i32 %17, i32 %18)
  ret void
}

declare dso_local i64 @bcom_task_inc(i32) #1

declare dso_local i32 @bcom_set_initiator(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
